<resources>
    <string name="app_name">SubmisionIntermediate</string>
    <string name="title_welcome_page">Welcome !</string>
    <string name="message_welcome_page">Please register and login if you already have an account!</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
    <string name="copyright">\@2022 Ayo Chat</string>
    <string name="title_signUp">Please fill in your data</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please fill your data to login</string>
    <string name="akunada">Already have account ? Login</string>
    <string name="akunbelum">Dont have an account yet ? Register</string>
    <string name="image_story">Image Story</string>
    <string name="welcome">"Welcome!"</string>
    <string name="menu_1">Logout</string>
    <string name="empty_foto">No photos at this time</string>
    <string name="desc">Description</string>
    <string name="createat">Created at %1$s,</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="menu_2">Setting</string>
    <string name="Yes">Yeah!</string>
    <string name="longitude">long</string>
    <string name="latitude">lat</string>
    <string name="createsukses">The account is ready. Come on, log in..</string>
    <string name="next">Next</string>
    <string name="no">Huh!</string>
    <string name="createfailed">\"The account did not register successfully , \"</string>
    <string name="again">Please try again</string>
    <string name="successlogin">Success Login</string>
    <string name="failedlogin">You cant login successfull</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location_failed">Location failed</string>
    <string name="retry">Retry</string>
</resources>