<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailStoryActivity"
    android:padding="24dp">

    <ImageView
        android:id="@+id/ivDetailStory"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:contentDescription="@string/image_story"
        tools:src="@tools:sample/avatars"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tvDetailName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:textSize="20sp"
        tools:text="@string/name"
        app:layout_constraintTop_toBottomOf="@id/ivDetailStory"/>

    <TextView
        android:id="@+id/tvDetailDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:textSize="20sp"
        tools:text="@string/desc"
        app:layout_constraintTop_toBottomOf="@id/tvDetailName"/>

    <TextView
        android:id="@+id/tvDetailCreated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        tools:text="@string/createat"
        app:layout_constraintTop_toBottomOf="@id/tvDetailDesc"/>


</androidx.constraintlayout.widget.ConstraintLayout>